--- a/index.html
+++ b/index.html
@@ -454,15 +454,15 @@
                     <img id="food-image" src="Big Food Image.png">
                     <ul class="idk size-list">
 
-                        <li class="size-item" id="size-0" onclick="upSize0()">
+                        <li class="size-item">
                             <p>0</p>
                         </li>
 
-                        <li class="size-item" id="size--" onclick="upSizeTru()">
+                        <li class="size-item-choosen">
                             <p>-</p>
                         </li>
 
-                        <li class="size-item" id="size-1" onclick="upSize1()">
+                        <li class="size-item">
                             <p>1</p>
                         </li>
                     </ul>
