--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                     </div>
 
                     <div class="description">
-                        <p id="healthy">Healthy</p>
+                        <div id="healthy-ctn">
+                            <p id="healthy">Healthy</p>
+                        </div>
                         <h1 class="description-title">Description</h1>
                         <p class="description-benefit">Chicken Hell Is The Healthies Chicken
                             For Gym Guys And Girls. It Promote Healthy Life Style And Make Your Energy Booster.</p>
